--- a/Panaderia-Heiland/pages/panificados.html
+++ b/Panaderia-Heiland/pages/panificados.html
@@ -71,7 +71,7 @@
             </div>
             <div class="galeria__item-6 grid__titulo" >
                 <img src="../images/pan-hamburguesas.jpeg" alt="ele6" class="galeria__img">
-                <h2 class="galeria__titulo">Pan de Hamburguesas</h2>
+                <h2 class="galeria__titulo">Pan de sesamo</h2>
             </div>
         </section>
 
