agregando animaciones al proyecto

--- a/Panaderia-Heiland/pages/panificados.html
+++ b/Panaderia-Heiland/pages/panificados.html
@@ -49,27 +49,27 @@
         </div>
 
         <section class="galeria__panificados">
-            <div class="galeria__item-1 grid__titulo">
+            <div class="galeria__item-1 grid__titulo animaciones">
                 <img src="../images/chipa.jpg" alt="ele1" class="galeria__img">
                  <h2 class="galeria__titulo">Chipa</h2>
             </div>
-            <div class="galeria__item-2 grid__titulo" >
+            <div class="galeria__item-2 grid__titulo animaciones" >
                 <img src="../images/bizcochos.jpg" alt="ele2" class="galeria__img">
                  <h2 class="galeria__titulo">bizcochos</h2>
             </div>
-            <div class="galeria__item-3 grid__titulo" >
+            <div class="galeria__item-3 grid__titulo animaciones" >
                 <img src="../images/mignones.jpeg" alt="ele3" class="galeria__img">
                  <h2 class="galeria__titulo">Mignones</h2>
             </div>
-            <div class="galeria__item-4 grid__titulo" >
+            <div class="galeria__item-4 grid__titulo animaciones" >
                 <img src="../images/trinchas.jpg" alt="ele4" class="galeria__img">
                  <h2 class="galeria__titulo">Trinchas</h2>
             </div>
-            <div class="galeria__item-5 grid__titulo" >
+            <div class="galeria__item-5 grid__titulo animaciones" >
                 <img src="../images/grisines.jpg" alt="ele5" class="galeria__img">
                  <h2 class="galeria__titulo">Grisines</h2>
             </div>
-            <div class="galeria__item-6 grid__titulo" >
+            <div class="galeria__item-6 grid__titulo animaciones" >
                 <img src="../images/pan-hamburguesas.jpeg" alt="ele6" class="galeria__img">
                 <h2 class="galeria__titulo">Pan de sesamo</h2>
             </div>
