--- a/Panaderia-Heiland/pages/pasteleria.html
+++ b/Panaderia-Heiland/pages/pasteleria.html
@@ -49,39 +49,39 @@
         </div>
 
         <section class="galeria__pasteleria">
-            <div class="galeria__item--1 grid__titulo-1">
+            <div class="galeria__item--1 grid__titulo-1 animaciones">
                 <img src="../images/cañonsitos.jpg" alt="ele1" class="galeria__img">
                 <h2 class="galeria__titulo">Cañoncitos</h2>
             </div>
-            <div class="galeria__item--2 grid__titulo-1">
+            <div class="galeria__item--2 grid__titulo-1 animaciones">
                 <img src="../images/lemon-pie.jpg" alt="ele2" class="galeria__img">
                 <h2 class="galeria__titulo">Lemon Pie</h2>
             </div>
-            <div class="galeria__item--3 grid__titulo-1">
+            <div class="galeria__item--3 grid__titulo-1 animaciones">
                 <img src="../images/masas-finas.jpg" alt="ele3" class="galeria__img">
                 <h2 class="galeria__titulo">Masas Finas</h2>
             </div>
-            <div class="galeria__item--4 grid__titulo-1">
+            <div class="galeria__item--4 grid__titulo-1 animaciones">
                 <img src="../images/medialunas.jpg" alt="ele4" class="galeria__img">
                 <h2 class="galeria__titulo">Medialunas</h2>
             </div>
-            <div class="galeria__item--5 grid__titulo-1">
+            <div class="galeria__item--5 grid__titulo-1 animaciones">
                 <img src="../images/mil-hojas.jpg" alt="ele5" class="galeria__img">
                 <h2 class="galeria__titulo">Mil Hojas</h2>
             </div>
-            <div class="galeria__item--6 grid__titulo-1">
+            <div class="galeria__item--6 grid__titulo-1 animaciones">
                 <img src="../images/palmeritas.jpg" alt="ele6" class="galeria__img">
                 <h2 class="galeria__titulo">Palmeritas</h2>
             </div>
-            <div class="galeria__item--7 grid__titulo-1">
+            <div class="galeria__item--7 grid__titulo-1 animaciones">
                 <img src="../images/pastafrola.jpg" alt="ele7" class="galeria__img">
                 <h2 class="galeria__titulo">Pastafrola</h2>
             </div>
-            <div class="galeria__item--8 grid__titulo-1">
+            <div class="galeria__item--8 grid__titulo-1 animaciones">
                 <img src="../images/tarta-coco.jpg" alt="ele8" class="galeria__img">
                 <h2 class="galeria__titulo">Tarta de Coco</h2>
             </div>
-            <div class="galeria__item--9 grid__titulo-1">
+            <div class="galeria__item--9 grid__titulo-1 animaciones">
                 <img src="../images/pañuelitos.jpg" alt="ele9" class="galeria__img">
                 <h2 class="galeria__titulo">Pañuelitos</h2>
             </div>
