--- a/Panaderia-Heiland/pages/panificados.html
+++ b/Panaderia-Heiland/pages/panificados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,21 @@
     <title>Panificados</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../Js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header class="header">
-            <button class="nav--toggle">
+    <header class="container border-bottom">
+        <button class="nav--toggle">
             <i class="header__icono fa-solid fa-bars"></i>
-            </button>
+        </button>
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
@@ -51,25 +57,25 @@
         <section class="galeria__panificados">
             <div class="galeria__item-1 grid__titulo animaciones">
                 <img src="../images/chipa.jpg" alt="ele1" class="galeria__img">
-                 <h2 class="galeria__titulo">Chipa</h2>
+                <h2 class="galeria__titulo">Chipa</h2>
             </div>
-            <div class="galeria__item-2 grid__titulo animaciones" >
+            <div class="galeria__item-2 grid__titulo animaciones">
                 <img src="../images/bizcochos.jpg" alt="ele2" class="galeria__img">
-                 <h2 class="galeria__titulo">bizcochos</h2>
+                <h2 class="galeria__titulo">bizcochos</h2>
             </div>
-            <div class="galeria__item-3 grid__titulo animaciones" >
+            <div class="galeria__item-3 grid__titulo animaciones">
                 <img src="../images/mignones.jpeg" alt="ele3" class="galeria__img">
-                 <h2 class="galeria__titulo">Mignones</h2>
+                <h2 class="galeria__titulo">Mignones</h2>
             </div>
-            <div class="galeria__item-4 grid__titulo animaciones" >
+            <div class="galeria__item-4 grid__titulo animaciones">
                 <img src="../images/trinchas.jpg" alt="ele4" class="galeria__img">
-                 <h2 class="galeria__titulo">Trinchas</h2>
+                <h2 class="galeria__titulo">Trinchas</h2>
             </div>
-            <div class="galeria__item-5 grid__titulo animaciones" >
+            <div class="galeria__item-5 grid__titulo animaciones">
                 <img src="../images/grisines.jpg" alt="ele5" class="galeria__img">
-                 <h2 class="galeria__titulo">Grisines</h2>
+                <h2 class="galeria__titulo">Grisines</h2>
             </div>
-            <div class="galeria__item-6 grid__titulo animaciones" >
+            <div class="galeria__item-6 grid__titulo animaciones">
                 <img src="../images/pan-hamburguesas.jpeg" alt="ele6" class="galeria__img">
                 <h2 class="galeria__titulo">Pan de sesamo</h2>
             </div>
@@ -80,17 +86,21 @@
 
     <footer class="footer foot__back">
         <ul class="footer__icon">
-            <li><a href="https://www.instagram.com/"><img src="../images/icono--instagram.ico" alt="Instagram" width="40" height="40"></a></li>
-            <li><a href="https://web.whatsapp.com/"><img src="../images/icono--wp.ico" alt="Whatsapp" width="40" height="40"></a></li>
-            <li><a href="https://www.facebook.com/"><img src="../images/icono--fb.ico" alt="Facebook" width="40" height="40"></a></li>
+            <li><a href="https://www.instagram.com/"><img src="../images/icono--instagram.ico" alt="Instagram"
+                        width="40" height="40"></a></li>
+            <li><a href="https://web.whatsapp.com/"><img src="../images/icono--wp.ico" alt="Whatsapp" width="40"
+                        height="40"></a></li>
+            <li><a href="https://www.facebook.com/"><img src="../images/icono--fb.ico" alt="Facebook" width="40"
+                        height="40"></a></li>
         </ul>
 
         <div class="footer__derechos">
             <h5>Derechos Reservados - Paz 2022</h5>
 
         </div>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
