--- a/Panaderia-Heiland/pages/nosotros.html
+++ b/Panaderia-Heiland/pages/nosotros.html
@@ -9,11 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
 
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../Js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
+    <header class="container border-bottom">
             <button class="nav--toggle">
             <i class="header__icono fa-solid fa-bars"></i>
             </button>
