agregando footer con Bs

--- a/Panaderia-Heiland/pages/nosotros.html
+++ b/Panaderia-Heiland/pages/nosotros.html
@@ -72,17 +72,27 @@
 
     </main>
 
-    <footer class="footer foot__back">
-        <ul class="footer__icon">
-            <li><a href="https://www.instagram.com/"><img src="../images/icono--instagram.ico" alt="Instagram" width="40" height="40"></a></li>
-            <li><a href="https://web.whatsapp.com/"><img src="../images/icono--wp.ico" alt="Whatsapp" width="40" height="40"></a></li>
-            <li><a href="https://www.facebook.com/"><img src="../images/icono--fb.ico" alt="Facebook" width="40" height="40"></a></li>
-        </ul>
+    <footer class="bg-dark text-center text-white">
+        <div class="container p-4 pb-0">
 
-        <div class="footer__derechos">
-            <h5>Derechos Reservados - Paz 2022</h5>
+            <section class="mb-4">
+
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/enMedanos" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+
+                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                            class="fab fa-whatsapp"></i></a>
+            </section>
+
         </div>
-        
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 Copyright: Panaderia Paz
+
+        </div>
+
     </footer>
     
 </body>
