pequeñas modificaciones en tipeo

--- a/Panaderia-Heiland/index.html
+++ b/Panaderia-Heiland/index.html
@@ -39,7 +39,7 @@
                     <a href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="pages/contacto.html">contacto</a>
+                    <a href="pages/contacto.html">Contacto</a>
                 </li>
 
             </ul>
