--- a/Panaderia-Heiland/pages/contacto.html
+++ b/Panaderia-Heiland/pages/contacto.html
@@ -39,7 +39,7 @@
                     <a href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">contacto</a>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
