--- a/Panaderia-Heiland/pages/panificados.html
+++ b/Panaderia-Heiland/pages/panificados.html
@@ -38,7 +38,7 @@
                     <a href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">contacto</a>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -61,7 +61,7 @@
             </div>
             <div class="galeria__item-2 grid__titulo animaciones">
                 <img src="../images/bizcochos.jpg" alt="ele2" class="galeria__img">
-                <h2 class="galeria__titulo">bizcochos</h2>
+                <h2 class="galeria__titulo">Bizcochos</h2>
             </div>
             <div class="galeria__item-3 grid__titulo animaciones">
                 <img src="../images/mignones.jpeg" alt="ele3" class="galeria__img">
