grid Bs al index y contacto

--- a/Panaderia-Heiland/index.html
+++ b/Panaderia-Heiland/index.html
@@ -47,27 +47,32 @@
 
     </header>
 
-    <main class="main  fondo-1">
+    <main class="fondo-1">
         <h1 class="titulo">PANADERIA PAZ</h1>
-        <div class="grid__main">
-            <div class="main__1">
-                <h3 class="subtitulo">Lo mas rico en panificados y pasteleria:</h3>
-                <p class="parrafo">Convencidos de que los sabores más deliciosos son generadores de grandes momentos,
-                    decidimos reinventar productos tradicionales hasta transformarlo en exclusivos, partiendo siempre
-                    del mismo origen: la nobleza de la harina como materia prima. Para lograrlo, nos focalizamos en tres
-                    pilares fundamentales: calidad en cada ingrediente idoneidad en la mano de obra y frescura en la
-                    permanente elaboración.</p>
+        <section class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-xs-12">
+                    <h3 class="subtitulo">Lo mas rico en panificados y pasteleria:</h3>
+                    <p class="parrafo">Convencidos de que los sabores más deliciosos son generadores de grandes
+                        momentos,
+                        decidimos reinventar productos tradicionales hasta transformarlo en exclusivos, partiendo
+                        siempre
+                        del mismo origen: la nobleza de la harina como materia prima. Para lograrlo, nos focalizamos en
+                        tres
+                        pilares fundamentales: calidad en cada ingrediente idoneidad en la mano de obra y frescura en la
+                        permanente elaboración.</p>
+
+                </div>
+                <div class="col-lg-6 col-md-6 col-xs-12 pt-5">
+                    <iframe width="100%" height="80%" src="https://www.youtube.com/embed/NziGYfkH3mo"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+
+                </div>
 
             </div>
-            <div class="main__2">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NziGYfkH3mo"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-            </div>
-
-        </div>
+        </section>
 
     </main>
 
