--- a/Panaderia-Heiland/pages/contacto.html
+++ b/Panaderia-Heiland/pages/contacto.html
@@ -50,54 +50,57 @@
         <h2 class="sub-posicion">Contactanos</h2>
     </div>
 
-    <section class="grid__contacto">
-        <form class="container" action="">
+    <section class="container pb-5">
+        <div class="row">
+            <form class="col-lg-6 col-md-6 col-xs-12" action="">
 
-            <div>
-                <input class="form-control mb-2" type="text" name="nombre" placeholder="ingrese su nombre..">
-            </div>
-
-            <div>
-                <input class="form-control mb-2" type="text" name="apellido" placeholder="ingrese su apellido..">
-            </div>
-
-            <div>
-                <input class="form-control mb-2" type="text" name="cel" placeholder="ingrese su telefono..">
-            </div>
-
-            <div>
-                <input class="form-control mb-3" type="text" id="mail" name="mail" placeholder="ingrese su Email..">
-            </div>
-
-            <div>
-                <label for="tipo">
-                    <p>Tipo de Mensaje:</p>
-                </label>
-                <select class="mb-3" name="tipo" id="tipo">
-                    <option value="consulta">consulta</option>
-                    <option value="sugerencia">sugerencia</option>
-                    <option value="comprar">comprar</option>
-                    <option value="presupuesto">presupuesto</option>
-                </select>
-            </div>
-            <div>
                 <div>
-                    <textarea class="form-control mb-2" rows="5" placeholder="mensaje"></textarea>
+                    <input class="form-control mb-2" type="text" name="nombre" placeholder="ingrese su nombre..">
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" type="submit">Enviar</button>
-                    <button class="btn btn-primary" type="reset">Limpiar</button>
+                    <input class="form-control mb-2" type="text" name="apellido" placeholder="ingrese su apellido..">
                 </div>
-            </div>
-        </form>
 
-        <div class="contact__gps">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.2385052788201!2d-62.69515950154649!3d-38.825299080389776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2ba3b6278e07e4!2spanaderia%20paz!5e0!3m2!1ses-419!2sar!4v1649226546920!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+                <div>
+                    <input class="form-control mb-2" type="text" name="cel" placeholder="ingrese su telefono..">
+                </div>
+
+                <div>
+                    <input class="form-control mb-3" type="text" id="mail" name="mail" placeholder="ingrese su Email..">
+                </div>
+
+                <div>
+                    <label for="tipo">
+                        <p>Tipo de Mensaje:</p>
+                    </label>
+                    <select class="mb-3" name="tipo" id="tipo">
+                        <option value="consulta">consulta</option>
+                        <option value="sugerencia">sugerencia</option>
+                        <option value="comprar">comprar</option>
+                        <option value="presupuesto">presupuesto</option>
+                    </select>
+                </div>
+                <div>
+                    <div>
+                        <textarea class="form-control mb-2" rows="5" placeholder="mensaje"></textarea>
+                    </div>
+
+                    <div>
+                        <button class="btn btn-primary" type="submit">Enviar</button>
+                        <button class="btn btn-primary" type="reset">Limpiar</button>
+                    </div>
+                </div>
+            </form>
+
+
+            <div class="col-lg-6 col-md-6 col-xs-12">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.2385052788201!2d-62.69515950154649!3d-38.825299080389776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2ba3b6278e07e4!2spanaderia%20paz!5e0!3m2!1ses-419!2sar!4v1649226546920!5m2!1ses-419!2sar"
+                    width="=100%" height="80%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </div>
     </section>
 
