--- a/Panaderia-Heiland/index.html
+++ b/Panaderia-Heiland/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 
