--- a/Panaderia-Heiland/pages/pasteleria.html
+++ b/Panaderia-Heiland/pages/pasteleria.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
