agregando sass y seo

--- a/Panaderia-Heiland/pages/panificados.html
+++ b/Panaderia-Heiland/pages/panificados.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="panaderia, panificados, pasteleria">
+    <meta name="description" content="Descubri todo en panificacion y pasteleria">
     <title>Panificados</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="/sass/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 
@@ -26,19 +28,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a href="../index.html">Inicio</a>
+                    <a class="navcolor" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./panificados.html">Panificados</a>
+                    <a class="navcolor" href="./panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./pasteleria.html">Pasteleria</a>
+                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./nosotros.html">Nosotros</a>
+                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">Contacto</a>
+                    <a class="navcolor" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -64,7 +66,7 @@
                 <h2 class="galeria__titulo">Bizcochos</h2>
             </div>
             <div class="galeria__item-3 grid__titulo animaciones">
-                <img src="../images/mignones.jpeg" alt="ele3" class="galeria__img">
+                <img src="../images/mignones.jpeg" alt="ele3"class="galeria__img">
                 <h2 class="galeria__titulo">Mignones</h2>
             </div>
             <div class="galeria__item-4 grid__titulo animaciones">
@@ -89,14 +91,14 @@
 
             <section class="mb-4">
 
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/enMedanos" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/enMedanos"
+                    role="button"><i class="fab fa-facebook-f"></i></a>
 
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-instagram"></i></a>
 
-                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                            class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-whatsapp"></i></a>
             </section>
 
         </div>
