--- a/Panaderia-Heiland/pages/pasteleria.html
+++ b/Panaderia-Heiland/pages/pasteleria.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="panaderia, panificados, pasteleria">
+    <meta name="description" content="Descubri todo en panificacion y pasteleria">
     <title>Pasteleria</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
     
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="/sass/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,19 +25,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a href="../index.html">Inicio</a>
+                    <a class="navcolor" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./panificados.html">Panificados</a>
+                    <a class="navcolor" href="./panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./pasteleria.html">Pasteleria</a>
+                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./nosotros.html">Nosotros</a>
+                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">Contacto</a>
+                    <a class="navcolor" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -51,41 +53,41 @@
             </h3>
         </div>
 
-        <section class="galeria__pasteleria">
+        <section class="galeria">
             <div class="galeria__item--1 grid__titulo-1 animaciones">
-                <img src="../images/cañonsitos.jpg" alt="ele1" class="galeria__img">
+                <img src="../images/cañonsitos.jpg" alt="ele1">
                 <h2 class="galeria__titulo">Cañoncitos</h2>
             </div>
             <div class="galeria__item--2 grid__titulo-1 animaciones">
-                <img src="../images/lemon-pie.jpg" alt="ele2" class="galeria__img">
+                <img src="../images/lemon-pie.jpg" alt="ele2">
                 <h2 class="galeria__titulo">Lemon Pie</h2>
             </div>
             <div class="galeria__item--3 grid__titulo-1 animaciones">
-                <img src="../images/masas-finas.jpg" alt="ele3" class="galeria__img">
+                <img src="../images/masas-finas.jpg" alt="ele3">
                 <h2 class="galeria__titulo">Masas Finas</h2>
             </div>
             <div class="galeria__item--4 grid__titulo-1 animaciones">
-                <img src="../images/medialunas.jpg" alt="ele4" class="galeria__img">
+                <img src="../images/medialunas.jpg" alt="ele4">
                 <h2 class="galeria__titulo">Medialunas</h2>
             </div>
             <div class="galeria__item--5 grid__titulo-1 animaciones">
-                <img src="../images/mil-hojas.jpg" alt="ele5" class="galeria__img">
+                <img src="../images/mil-hojas.jpg" alt="ele5">
                 <h2 class="galeria__titulo">Mil Hojas</h2>
             </div>
             <div class="galeria__item--6 grid__titulo-1 animaciones">
-                <img src="../images/palmeritas.jpg" alt="ele6" class="galeria__img">
+                <img src="../images/palmeritas.jpg" alt="ele6">
                 <h2 class="galeria__titulo">Palmeritas</h2>
             </div>
             <div class="galeria__item--7 grid__titulo-1 animaciones">
-                <img src="../images/pastafrola.jpg" alt="ele7" class="galeria__img">
+                <img src="../images/pastafrola.jpg" alt="ele7">
                 <h2 class="galeria__titulo">Pastafrola</h2>
             </div>
             <div class="galeria__item--8 grid__titulo-1 animaciones">
-                <img src="../images/tarta-coco.jpg" alt="ele8" class="galeria__img">
+                <img src="../images/tarta-coco.jpg" alt="ele8">
                 <h2 class="galeria__titulo">Tarta de Coco</h2>
             </div>
             <div class="galeria__item--9 grid__titulo-1 animaciones">
-                <img src="../images/pañuelitos.jpg" alt="ele9" class="galeria__img">
+                <img src="../images/pañuelitos.jpg" alt="ele9">
                 <h2 class="galeria__titulo">Pañuelitos</h2>
             </div>
         </section>
