--- a/Panaderia-Heiland/index.html
+++ b/Panaderia-Heiland/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="panaderia, panificados, pasteleria">
+    <meta name="description" content="Descubri todo en panificacion y pasteleria">
     <title>Panaderia Paz</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,10 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="/sass/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 
@@ -27,19 +29,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a href="index.html">Inicio</a>
+                    <a class="navindex" href="index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="pages/panificados.html">Panificados</a>
+                    <a class="navindex" href="pages/panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a href="pages/pasteleria.html">Pasteleria</a>
+                    <a class="navindex" href="pages/pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a href="pages/nosotros.html">Nosotros</a>
+                    <a class="navindex" href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="pages/contacto.html">Contacto</a>
+                    <a class="navindex" href="pages/contacto.html">Contacto</a>
                 </li>
 
             </ul>
