--- a/Panaderia-Heiland/pages/contacto.html
+++ b/Panaderia-Heiland/pages/contacto.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="keywords" content="panaderia, panificados, pasteleria">
+    <meta name="description" content="Descubri todo en panificacion y pasteleria">
+    <title>Contactenos para consultas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="/sass/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
-
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 
@@ -27,19 +28,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a href="../index.html">Inicio</a>
+                    <a class="navcolor" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./panificados.html">Panificados</a>
+                    <a class="navcolor" href="./panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./pasteleria.html">Pasteleria</a>
+                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./nosotros.html">Nosotros</a>
+                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">Contacto</a>
+                    <a class="navcolor" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -47,7 +48,7 @@
 
 
     <div class="subtitulo">
-        <h2 class="sub-posicion">Contactanos</h2>
+        <h2 class="titulo">Contactanos</h2>
     </div>
 
     <section class="container pb-5">
@@ -72,7 +73,7 @@
 
                 <div>
                     <label for="tipo">
-                        <p>Tipo de Mensaje:</p>
+                        <p class="navcolor">Tipo de Mensaje:</p>
                     </label>
                     <select class="mb-3" name="tipo" id="tipo">
                         <option value="consulta">consulta</option>
