--- a/Panaderia-Heiland/pages/nosotros.html
+++ b/Panaderia-Heiland/pages/nosotros.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <meta name="keywords" content="panaderia, panificados, pasteleria">
+    <meta name="description" content="Descubri todo en panificacion y pasteleria">
+    <title>Nuestra historia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="/sass/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,19 +25,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a href="../index.html">Inicio</a>
+                    <a class="navcolor" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./panificados.html">Panificados</a>
+                    <a class="navcolor" href="./panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./pasteleria.html">Pasteleria</a>
+                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./nosotros.html">Nosotros</a>
+                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contacto.html">Contacto</a>
+                    <a class="navcolor" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
