--- a/Panaderia-Heiland/pages/pasteleria.html
+++ b/Panaderia-Heiland/pages/pasteleria.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
     
-    <link rel="stylesheet" href="/sass/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -55,7 +55,7 @@
 
         <section class="galeria">
             <div class="galeria__item--1 grid__titulo-1 animaciones">
-                <img src="../images/cañonsitos.jpg" alt="ele1">
+                <img src="../images/cañonsitos1.jpg" alt="ele1">
                 <h2 class="galeria__titulo">Cañoncitos</h2>
             </div>
             <div class="galeria__item--2 grid__titulo-1 animaciones">
@@ -87,7 +87,7 @@
                 <h2 class="galeria__titulo">Tarta de Coco</h2>
             </div>
             <div class="galeria__item--9 grid__titulo-1 animaciones">
-                <img src="../images/pañuelitos.jpg" alt="ele9">
+                <img src="../images/pañuelitos1.jpg" alt="ele9">
                 <h2 class="galeria__titulo">Pañuelitos</h2>
             </div>
         </section>
