--- a/Panaderia-Heiland/index.html
+++ b/Panaderia-Heiland/index.html
@@ -14,10 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/sass/bootstrap.min.css">
+    <link rel="stylesheet" href="/Panaderia-Heiland/css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="./Panaderia-Heiland/css/style.css">
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 
@@ -29,19 +29,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item">
-                    <a class="navindex" href="index.html">Inicio</a>
+                    <a class="navindex" href="/index.html">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a class="navindex" href="pages/panificados.html">Panificados</a>
+                    <a class="navindex" href="/Panaderia-Heiland/pages/panificados.html">Panificados</a>
                 </li>
                 <li class="nav__item">
-                    <a class="navindex" href="pages/pasteleria.html">Pasteleria</a>
+                    <a class="navindex" href="/Panaderia-Heiland/pages/pasteleria.html">Pasteleria</a>
                 </li>
                 <li class="nav__item">
-                    <a class="navindex" href="pages/nosotros.html">Nosotros</a>
+                    <a class="navindex" href="/Panaderia-Heiland/pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav__item">
-                    <a class="navindex" href="pages/contacto.html">Contacto</a>
+                    <a class="navindex" href="/Panaderia-Heiland/pages/contacto.html">Contacto</a>
                 </li>
 
             </ul>
