cambio de colores

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
@@ -49,7 +52,7 @@
 
     </header>
 
-    <main class="fondo-1">
+    <main>
         <h1 class="titulo">PANADERIA PAZ</h1>
         <section class="container">
             <div class="row">
@@ -78,7 +81,7 @@
 
     </main>
 
-    <footer class="bg-dark text-center text-white">
+    <footer class="bg-dark text-center text-white ">
         <div class="container p-4 pb-0">
 
             <section class="mb-4">
