--- a/pages/panificados.html
+++ b/pages/panificados.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,400;1,500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
@@ -66,7 +69,7 @@
                 <h2 class="galeria__titulo">Bizcochos</h2>
             </div>
             <div class="galeria__item-3 grid__titulo animaciones">
-                <img src="../images/mignones.jpeg" alt="ele3"class="galeria__img">
+                <img src="../images/mignones.jpeg" alt="ele3" class="galeria__img">
                 <h2 class="galeria__titulo">Mignones</h2>
             </div>
             <div class="galeria__item-4 grid__titulo animaciones">
