--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,7 +49,7 @@
                 <h3 class="subtitulo">Nosotros:</h3>
             </div>
             <div>
-                <p class="nosotros-parrafo">
+                <p class="parrafo">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eius,
                     sapiente provident reiciendis soluta labore accusamus temporibus dicta non dignissimos!
                 </p>
@@ -60,7 +60,7 @@
             <h3 class="subtitulo">Historia:</h3>
             </div>
             <div>
-                <p class="nosotros-parrafo">
+                <p class="parrafo">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis sit ducimus sunt nam,
                      repudiandae iste doloremque vero sed similique rerum.
                 </p>
