correccion class pasteleria

--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -55,7 +55,7 @@
             </h3>
         </div>
 
-        <section class="galeria">
+        <section class="galeria__pasteleria">
             <div class="galeria__item--1 grid__titulo-1 animaciones">
                 <img src="../images/cañonsitos1.jpg" alt="ele1">
                 <h2 class="galeria__titulo">Cañoncitos</h2>
