acomodando parrafo index

--- a/index.html
+++ b/index.html
@@ -62,10 +62,16 @@
                         momentos,
                         decidimos reinventar productos tradicionales hasta transformarlo en exclusivos, partiendo
                         siempre
-                        del mismo origen: la nobleza de la harina como materia prima. Para lograrlo, nos focalizamos en
+                        del mismo origen. la nobleza de la harina como materia prima. Para lograrlo, nos focalizamos en
                         tres
-                        pilares fundamentales: calidad en cada ingrediente idoneidad en la mano de obra y frescura en la
-                        permanente elaboración.</p>
+                        pilares fundamentales:
+                        <ul class="parrafo">
+                            <li>Calidad en cada ingrediente.</li>
+                            <li>Idoneidad en la mano de obra.</li>
+                            <li>Frescura en la
+                                permanente elaboración.</li>
+                        </ul> 
+                        </p>
 
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 pt-5">
